--- a/users/templates/users/registration.html
+++ b/users/templates/users/registration.html
@@ -1,86 +1,74 @@
-{% load static %}
+{% extends 'users/base.html' %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="{% static 'css/registration.css' %}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  </head>
-</head>
-<body>
-    <section class="vh-100 bg-image"
+{% block content %}
+  <section class="vh-100 bg-image"
   style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/new-templates/search-box/img4.webp');">
-  <div class="mask d-flex align-items-center h-100 gradient-custom-3">
-    <div class="container h-100">
-      <div class="row d-flex justify-content-center align-items-center h-100">
-        <div class="col-12 col-md-9 col-lg-7 col-xl-6">
-          <div class="card" style="border-radius: 15px;">
-            <div class="card-body p-5">
-                {% if form.errors %}
-                    <div class="alert alert-warning alert-dismissible fade show" role="alert"
-                         style="margin-top: 50px;">
-                        {{ form.errors }}
-                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                            <span aria-hidden="true">&times;</span>
-                        </button>
+      <div class="mask d-flex align-items-center h-100 gradient-custom-3">
+        <div class="container h-100">
+          <div class="row d-flex justify-content-center align-items-center h-100">
+            <div class="col-12 col-md-9 col-lg-7 col-xl-6">
+              <div class="card" style="border-radius: 15px;">
+                <div class="card-body p-5">
+                    {% if form.errors %}
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert"
+                             style="margin-top: 50px;">
+                            {{ form.errors }}
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    {% endif %}
+                  <h2 class="text-uppercase text-center mb-5">Создание аккаунта</h2>
+
+                  <form action="{% url 'users:registration' %}" method="post">
+                      {% csrf_token %}
+
+                    <div class="form-outline mb-4">
+                      <label class="form-label" for={{ form.username.id_for_label }}>Имя пользователя</label>
+                      {{ form.username }}
                     </div>
-                {% endif %}
-              <h2 class="text-uppercase text-center mb-5">Создание аккаунта</h2>
 
-              <form action="{% url 'users:registration' %}" method="post">
-                  {% csrf_token %}
+                    <div class="form-outline mb-4">
+                      <label class="form-label" for={{ form.first_name.id_for_label }}>Имя</label>
+                      {{ form.first_name }}
+                    </div>
 
-                <div class="form-outline mb-4">
-                  <label class="form-label" for={{ form.username.id_for_label }}>Имя пользователя</label>
-                  {{ form.username }}
+                    <div class="form-outline mb-4">
+                      <label class="form-label" for={{ form.last_name.id_for_label }}>Фамилия</label>
+                      {{ form.last_name }}
+                    </div>
+
+                    <div class="form-outline mb-4">
+                      <label class="form-label" for={{ form.email.id_for_label }}>Email</label>
+                      {{ form.email }}
+                    </div>
+
+                    <div class="form-outline mb-4">
+                      <label class="form-label" for={{ form.password1.id_for_label }}>Пароль</label>
+                      {{ form.password1 }}
+                    </div>
+
+                    <div class="form-outline mb-4">
+                      <label class="form-label" for={{ form.password2.id_for_label }}>Пароль</label>
+                      {{ form.password2 }}
+                    </div>
+
+                    <div class="d-flex justify-content-center">
+                      <input type="submit"
+                        class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
+                      value="Зарегистрироваться">
+                    </div>
+
+                    <p class="text-center text-muted mt-5 mb-0">Уже есть аккаунт? <a href="{% url 'users:login' %}"
+                        class="fw-bold text-body"><u>Авторизоваться</u></a></p>
+
+                  </form>
+
                 </div>
-
-                <div class="form-outline mb-4">
-                  <label class="form-label" for={{ form.first_name.id_for_label }}>Имя</label>
-                  {{ form.first_name }}
-                </div>
-
-                <div class="form-outline mb-4">
-                  <label class="form-label" for={{ form.last_name.id_for_label }}>Фамилия</label>
-                  {{ form.last_name }}
-                </div>
-
-                <div class="form-outline mb-4">
-                  <label class="form-label" for={{ form.email.id_for_label }}>Email</label>
-                  {{ form.email }}
-                </div>
-
-                <div class="form-outline mb-4">
-                  <label class="form-label" for={{ form.password1.id_for_label }}>Пароль</label>
-                  {{ form.password1 }}
-                </div>
-
-                <div class="form-outline mb-4">
-                  <label class="form-label" for={{ form.password2.id_for_label }}>Пароль</label>
-                  {{ form.password2 }}
-                </div>
-
-                <div class="d-flex justify-content-center">
-                  <input type="submit"
-                    class="btn btn-success btn-block btn-lg gradient-custom-4 text-body"
-                  value="Зарегистрироваться">
-                </div>
-
-                <p class="text-center text-muted mt-5 mb-0">Уже есть аккаунт? <a href="{% url 'users:login' %}"
-                    class="fw-bold text-body"><u>Авторизоваться</u></a></p>
-
-              </form>
-
+              </div>
             </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
 </section>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-</body>
-</html>
+{% endblock %}
