--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,10 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-Thanks for coming !
-</body>
-</html>
+{% extends 'barter/base.html' %}
+{% load static %}
+
+
+
+{% block content %}
+      <img width="200" height="200" class="rounded-circle"
+           src="{% if user.image %} {{ user.image.url }} {% else %} {% static 'images/DreamWorks.jpg' %} {% endif %}">
+{#      <img src="{{ user.image }}" width="200" height="200" class="rounded-circle">#}
+      <form action="{% url 'users:profile' user.username %}" method="post" enctype="multipart/form-data">
+          {% csrf_token %}
+          {{ form.image }}
+          <div class="col-md-2">
+            <label for={{ form.username.id_for_label }} class="form-label">Имя пользователя</label>
+            {{ form.username }}
+          </div>
+          <div class="col-md-2">
+            <label for={{ form.first_name.id_for_label }} class="form-label">Имя</label>
+            {{ form.first_name }}
+          </div>
+          <div class="col-md-2">
+            <label for={{ form.last_name.id_for_label }} class="form-label">Фамилия</label>
+            {{ form.last_name }}
+          </div>
+          <div class="col-md-2">
+            <label for={{ form.email.id_for_label }} class="form-label">Почта</label>
+            {{ form.email }}
+          </div><br>
+          <div class="col-12">
+            <button type="submit" class="btn btn-dark">Сохранить</button>
+          </div>
+      </form>
+
+{% endblock %}
