--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -4,31 +4,52 @@
 
 
 {% block content %}
+    <div class="d-flex justify-content-center">
       <img width="200" height="200" class="rounded-circle"
            src="{% if user.image %} {{ user.image.url }} {% else %} {% static 'images/DreamWorks.jpg' %} {% endif %}">
+    </div>
+    <br>
 {#      <img src="{{ user.image }}" width="200" height="200" class="rounded-circle">#}
       <form action="{% url 'users:profile' user.username %}" method="post" enctype="multipart/form-data">
           {% csrf_token %}
-          {{ form.image }}
-          <div class="col-md-2">
-            <label for={{ form.username.id_for_label }} class="form-label">Имя пользователя</label>
-            {{ form.username }}
+          <div class="d-flex justify-content-center">
+{#                {{ form.image }}#}
+              <div class="mb-3">
+                  <label for="{{ form.image.id_for_label }}" class="form-label">Выберите изображение</label>
+{#                  <input class="form-control form-control-sm" id="formFileSm" type="file">#}
+                  {{ form.image }}
+              </div>
           </div>
-          <div class="col-md-2">
-            <label for={{ form.first_name.id_for_label }} class="form-label">Имя</label>
-            {{ form.first_name }}
+          <div class="d-flex justify-content-center">
+              <div class="col-md-2">
+                <label for={{ form.username.id_for_label }} class="form-label">Имя пользователя</label>
+                {{ form.username }}
+              </div>
           </div>
-          <div class="col-md-2">
-            <label for={{ form.last_name.id_for_label }} class="form-label">Фамилия</label>
-            {{ form.last_name }}
+          <div class="d-flex justify-content-center">
+              <div class="col-md-2">
+                <label for={{ form.first_name.id_for_label }} class="form-label">Имя</label>
+                {{ form.first_name }}
+              </div>
           </div>
-          <div class="col-md-2">
-            <label for={{ form.email.id_for_label }} class="form-label">Почта</label>
-            {{ form.email }}
+          <div class="d-flex justify-content-center">
+              <div class="col-md-2">
+                <label for={{ form.last_name.id_for_label }} class="form-label">Фамилия</label>
+                {{ form.last_name }}
+              </div>
+          </div>
+          <div class="d-flex justify-content-center">
+              <div class="col-md-2">
+                <label for={{ form.email.id_for_label }} class="form-label">Почта</label>
+                {{ form.email }}
+              </div>
           </div><br>
-          <div class="col-12">
-            <button type="submit" class="btn btn-dark">Сохранить</button>
+          <div class="d-flex justify-content-center">
+              <div class="button">
+                <button type="submit" class="btn btn-dark">Сохранить</button>
+              </div>
           </div>
       </form>
+
 
 {% endblock %}
