--- a/barter/templates/barter/items.html
+++ b/barter/templates/barter/items.html
@@ -15,73 +15,75 @@
 
   {% block content %}
 
-
-  <div class="row row-cols-1 row-cols-md-2 g-4">
-    <div class="col">
-        <div class="card mb-3" style="max-width: 540px;">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="{% static 'images/DreamWorks.jpg' %}" class="img-fluid rounded-start" alt="{% url 'users:login' %}">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        {#        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>#}
+    <div class="d-flex justify-content-evenly">
+      <div class="row row-cols-1 row-cols-md-3 g-4" style="position: center">
+        <div class="col">
+            <div class="card mb-3" style="max-width: 540px;">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="{% static 'images/no_photo.png' %}" class="img-fluid rounded-start" alt="" style="height: 100%">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                    <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-        </div>
-      <div class="col">
-        <div class="card mb-3" style="max-width: 540px;">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="{% static 'images/DreamWorks.jpg' %}" class="img-fluid rounded-start" alt="...">
             </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        {#        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>#}
+          <div class="col">
+            <div class="card mb-3 " style="max-width: 540px;">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="{% static 'images/no_photo.png' %}" class="img-fluid rounded-start" alt="..." style="height: 100%">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Новые наручные часы Candino</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            {#        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>#}
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-          </div>
-      <div class="col">
-        <div class="card mb-3" style="max-width: 540px;">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="{% static 'images/DreamWorks.jpg' %}" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        {#        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>#}
+              </div>
+          <div class="col">
+            <div class="card mb-3" style="max-width: 540px;">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="{% static 'images/DreamWorks.jpg' %}" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            {#        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>#}
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
-        </div>
-          </div>
-      <div class="col">
-        <div class="card mb-3" style="max-width: 540px;">
-          <div class="row g-0">
-            <div class="col-md-4">
-              <img src="{% static 'images/DreamWorks.jpg' %}" class="img-fluid rounded-start" alt="...">
-            </div>
-            <div class="col-md-8">
-              <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-        {#        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>#}
+              </div>
+          <div class="col">
+            <div class="card mb-3" style="max-width: 540px;">
+              <div class="row g-0">
+                <div class="col-md-4">
+                  <img src="{% static 'images/DreamWorks.jpg' %}" class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                  <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            {#        <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>#}
+                  </div>
+                </div>
               </div>
             </div>
-          </div>
+              </div>
         </div>
-          </div>
-    </div>
+      </div>
      {% endblock %}
+
   </body>
 </html>
