--- a/barter/templates/barter/items.html
+++ b/barter/templates/barter/items.html
@@ -15,20 +15,23 @@
 
   {% block content %}
 
-{#        <div class="d-flex justify-content-evenly">#}
           <div class="row row-cols-1 row-cols-md-3 g-4" style="position: center;">
            {% for item in object_list %}
             <div class="col">
                 <div class="card mb-3" style="max-width: 540px; left: 10%">
                   <div class="row g-0">
                     <div class="col-md-4">
-                      <img src="{% if item.photo %} {{ item.photo.url }} {% else %} {% static 'images/no_photo.png' %} {% endif %}"
-                           class="img-fluid rounded-start" alt="" style="height: 100%">
+                        <a href="{% url 'barter:announcement_detail' item.pk %}">
+                          <img src="{% if item.photo %} {{ item.photo.url }} {% else %} {% static 'images/no_photo.png' %} {% endif %}"
+                               class="img-fluid rounded-start" alt="" style="height: 100%">
+                        </a>
                     </div>
                     <div class="col-md-8">
                       <div class="card-body">
-                        <h5 class="card-title">{{ item.title }}</h5>
-                        <p class="card-text">{{ item.description }}</p>
+                         <a href="{% url 'barter:announcement_detail' item.pk %}" class="link-dark" style="text-decoration: none">
+                            <h5 class="card-title">{{ item.title }}</h5>
+                         </a>
+                        <p class="card-text">{{ item.description|truncatechars:38 }}</p>
                       </div>
                       <div class="card-footer">
                         <p class="card-text"><small class="text-body-secondary">Created at {{ item.date_created.date }}. Sell in {{ item.place }}</small></p>
@@ -39,7 +42,6 @@
             </div>
           {% endfor %}
           </div>
-{#        </div>#}
 
      {% endblock %}
 
