--- a/barter/templates/barter/base.html
+++ b/barter/templates/barter/base.html
@@ -20,7 +20,7 @@
         </button>
         <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
           <div class="offcanvas-header">
-            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Dark offcanvas</h5>
+            <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Сервис обмена вещами</h5>
             <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
           </div>
           <div class="offcanvas-body">
@@ -30,6 +30,9 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'barter:create_announcement' %}">Создать объявление</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Мои объявления</a>
               </li>
               <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
