--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -6,17 +6,14 @@
 {% block content %}
     <div class="d-flex justify-content-center">
       <img width="200" height="200" class="rounded-circle"
-           src="{% if user.image %} {{ user.image.url }} {% else %} {% static 'images/DreamWorks.jpg' %} {% endif %}">
+           src="{% if user.image %} {{ user.image.url }} {% else %} {% static 'images/no_photo.png' %} {% endif %}">
     </div>
     <br>
-{#      <img src="{{ user.image }}" width="200" height="200" class="rounded-circle">#}
       <form action="{% url 'users:profile' user.username %}" method="post" enctype="multipart/form-data">
           {% csrf_token %}
           <div class="d-flex justify-content-center">
-{#                {{ form.image }}#}
               <div class="mb-3">
                   <label for="{{ form.image.id_for_label }}" class="form-label">Выберите изображение</label>
-{#                  <input class="form-control form-control-sm" id="formFileSm" type="file">#}
                   {{ form.image }}
               </div>
           </div>
